整合C++版本的入门部分